--- a/polynomial_interpolator.ipynb
+++ b/polynomial_interpolator.ipynb
@@ -258,8 +258,17 @@
         "        except ValueError:\n",
         "            print(\"Entrada inválida. Por favor, digite um número.\")\n",
         "\n",
-        
+        "# --- Ponto de entrada do script ---\n",
+        "# A linha abaixo garante que a função main() só será executada\n",
+        "# quando o script for rodado diretamente.\n",
         "if __name__ == \"__main__\":\n",
         "    main()"
       ],
-      
+      "metadata": {
+        "id": "prYyXGyE04TB"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
+}
